# HoCloth

./: .gitignore  CMakeLists.txt  CMakePresets.json  __init__.py  ai须知.md  build_physx.ps1  package_addon.ps1  pyproject.toml  工程大纲.md
_docs/: 2026-04-24-progress-notes.md  Blender_Native数据交换契约.md  BoneX播放与PhysX同步方案分析.md  MC2 BoneSpring 架构对照与 HoCloth 改进路线.md  MC2_BoneSpring_第一轮复现记录.md  MC2_BoneSpring_第三轮复现记录.md  MC2_BoneSpring_第二轮复现记录.md  MC2_BoneSpring_第四轮复现记录.md  MC2_Core完整移植重构方案.md  MC2_PORTING_MAP.md  XPBD重构工程大纲与参考项目分析.md  distribution.md  project_layout.md  runtime_mvp_status.md  发布流程与构建说明.md  发布说明.md  本地打包流程.md  目录功能说明.md  统一碰撞架构草案.md  运动学碰撞体与XPBD接触改造方案.md  项目结构说明.md
_native/: CMakeLists.txt
_native/include/: hocloth_collision_world.hpp  hocloth_coordinate_space.hpp  hocloth_physx_builder.hpp  hocloth_runtime_api.hpp
_native/include/hocloth/api/: mc2_backend.hpp
_native/include/hocloth/blender/: authoring_snapshot_transfer.hpp
_native/include/hocloth/cloth/: cloth_force_mode.hpp  cloth_normal_axis.hpp  cloth_parameters.hpp  cloth_process.hpp  cloth_serialize_data.hpp  custom_skinning_settings.hpp  gizmo_serialize_data.hpp  normal_alignment_settings.hpp  selection_data.hpp
_native/include/hocloth/cloth/collider/: capsule_collider.hpp  collider_component.hpp  plane_collider.hpp  sphere_collider.hpp
_native/include/hocloth/cloth/constraints/: angle_constraint.hpp  collider_collision_constraint.hpp  distance_constraint.hpp  inertia_constraint.hpp  inertia_constraint_data.hpp  motion_constraint.hpp  self_collision_constraint.hpp  tether_constraint.hpp  triangle_bending_constraint.hpp
_native/include/hocloth/cloth/parameters/: check_slider_serialize_data.hpp  culling_settings.hpp  curve_serialize_data.hpp
_native/include/hocloth/cloth/wind/: magica_wind_zone.hpp  wind_params.hpp  wind_settings.hpp
_native/include/hocloth/core/define/: system_define.hpp
_native/include/hocloth/core/interface/: i_count.hpp  i_data_validate.hpp  i_valid.hpp
_native/include/hocloth/manager/: i_manager.hpp  magica_manager.hpp  magica_settings.hpp  manager_status.hpp
_native/include/hocloth/manager/cloth/: cloth_manager.hpp  prebuild_manager.hpp
_native/include/hocloth/manager/render/: render_setup_data_serialization.hpp
_native/include/hocloth/manager/simulation/: collider_manager.hpp  simulation_manager.hpp  time_manager.hpp  wind_manager.hpp
_native/include/hocloth/manager/team/: team_manager.hpp  team_wind_data.hpp
_native/include/hocloth/manager/transform/: transform_data.hpp  transform_data_serialization.hpp  transform_manager.hpp  transform_record.hpp
_native/include/hocloth/manager/virtual_mesh/: virtual_mesh_manager.hpp
_native/include/hocloth/prebuild/: prebuild_serialize_data.hpp  share_prebuild_data.hpp  unique_prebuild_data.hpp
_native/include/hocloth/reduction/: reduction_settings.hpp  reduction_work_data.hpp  same_distance_reduction.hpp  shape_distance_reduction.hpp  simple_distance_reduction.hpp  step_reduction_base.hpp
_native/include/hocloth/settings/: cloth_debug_settings.hpp  virtual_mesh_debug_settings.hpp
_native/include/hocloth/utility/data/: data_utility.hpp  multi_data_builder.hpp
_native/include/hocloth/utility/grid/: grid_map.hpp
_native/include/hocloth/utility/jobs/: interlock_utility.hpp  job_utility.hpp
_native/include/hocloth/utility/math/: int_aabb.hpp  math_extensions.hpp  math_types.hpp  math_utility.hpp  minimum_data.hpp
_native/include/hocloth/utility/misc/: develop.hpp  static_string_builder.hpp
_native/include/hocloth/utility/native_collection/: bit_flag.hpp  data_chunk.hpp  ex_cost_sorted_list1.hpp  ex_cost_sorted_list4.hpp  ex_native_array.hpp  ex_processing_list.hpp  ex_simple_native_array.hpp  fixed_list.hpp  native_array_extensions.hpp  native_multi_hash_map_extensions.hpp  native_reference_extensions.hpp
_native/include/hocloth/utility/result_code/: exception.hpp  result_code.hpp
_native/include/hocloth/utility/time/: time_span.hpp
_native/include/hocloth/virtual_mesh/: vertex_attribute.hpp  virtual_mesh.hpp  virtual_mesh_bone_weight.hpp  virtual_mesh_container.hpp  virtual_mesh_primitive.hpp  virtual_mesh_raycast_hit.hpp  virtual_mesh_serialization.hpp  virtual_mesh_transform.hpp  virtual_mesh_type.hpp
_native/src/: hocloth_collision_world.cpp  hocloth_physx_builder.cpp  hocloth_python_module.cpp  hocloth_runtime_api.cpp
_native/src/api/: mc2_backend.cpp
_native/src/blender/: authoring_snapshot_transfer.cpp
_native/src/cloth/: cloth_process.cpp
_native/src/cloth/constraints/: angle_constraint.cpp  collider_collision_constraint.cpp  distance_constraint.cpp  inertia_constraint.cpp  motion_constraint.cpp  self_collision_constraint.cpp  tether_constraint.cpp  triangle_bending_constraint.cpp
_native/src/manager/: magica_manager.cpp
_native/src/manager/cloth/: cloth_manager.cpp  prebuild_manager.cpp
_native/src/manager/render/: render_setup_data_serialization.cpp
_native/src/manager/simulation/: collider_manager.cpp  simulation_manager.cpp  time_manager.cpp  wind_manager.cpp
_native/src/manager/team/: team_manager.cpp
_native/src/manager/transform/: transform_data.cpp  transform_data_serialization.cpp  transform_manager.cpp  transform_record.cpp
_native/src/manager/virtual_mesh/: virtual_mesh_manager.cpp
_native/src/reduction/: same_distance_reduction.cpp  shape_distance_reduction.cpp  simple_distance_reduction.cpp  step_reduction_base.cpp
_native/src/utility/data/: data_utility.cpp
_native/src/utility/math/: math_extensions.cpp  math_utility.cpp
_native/src/utility/misc/: develop.cpp
_native/src/utility/native_collection/: data_chunk.cpp  ex_processing_list.cpp
_native/src/utility/result_code/: exception.cpp  result_code.cpp
_native/src/utility/time/: time_span.cpp
_native/src/virtual_mesh/: virtual_mesh.cpp  virtual_mesh_bone_weight.cpp  virtual_mesh_container.cpp  virtual_mesh_serialization.cpp  virtual_mesh_transform.cpp
_native/tests/native/: mc2_core_smoke.cpp
_third_party/: README.md
authoring/: __init__.py  extract.py  operators.py  panel.py  viewport.py
(+27 files in other folders)
